--- a/04-Media-Query-e-Design-Responsivo/index.html
+++ b/04-Media-Query-e-Design-Responsivo/index.html
@@ -13,8 +13,8 @@
         <p>I appear on screen wider than 768px</p>
     </div>
 
-    <div class="sm:bg-amber-500 md:bg-amber-700">
-        <p>I appear on screen wider than 768px</p>
+    <div class="max-sm:bg-amber-500 max-md:bg-amber-700">
+        <p>I change color according to screen size</p>
     </div>
 </body>
 
