--- a/15-Columns/index.html
+++ b/15-Columns/index.html
@@ -30,7 +30,7 @@
         <img src="image.jpg" alt="">
     </div>
 
-    <div class="columns-3xs">
+    <div class="columns-sm gap-0">
         <img src="image.jpg" alt="">
         <img src="image.jpg" alt="">
         <img src="image.jpg" alt="">
