--- a/16-Flex/index.html
+++ b/16-Flex/index.html
@@ -16,7 +16,7 @@
         <div class="bg-green-300 size-20"></div>
     </div>
 
-    <div class="size-full bg-pink-100 flex flex-wrap">
+    <div class="size-full bg-pink-100 flex flex-wrap content-start">
         <div class="bg-red-300 h-32 w-32"></div>
         <div class="bg-blue-300 h-32 w-32"></div>
         <div class="bg-orange-300 h-32 w-32"></div>
